[gd_scene load_steps=7 format=3 uid="uid://d3s68t17s5wq3"]

[ext_resource type="Script" uid="uid://c64w7tjuorbpr" path="res://scripts/Card.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://bc60v4p5iyjwx" path="res://Sound/take_card.mp3" id="2_cefgg"]
[ext_resource type="AudioStream" uid="uid://cqoq7bprstx0t" path="res://Sound/place_card.mp3" id="3_yvhul"]
[ext_resource type="AudioStream" uid="uid://dc4kn2wo40yx4" path="res://Sound/navel_card.mp3" id="4_47ht5"]
[ext_resource type="AudioStream" uid="uid://bav4g3a23d6fm" path="res://Sound/place_bottle.mp3" id="4_yvhul"]
[ext_resource type="AudioStream" uid="uid://bi6d8qo2pxlg" path="res://Sound/give_money.mp3" id="6_47ht5"]

[node name="Card" type="TextureRect"]
clip_contents = true
custom_minimum_size = Vector2(78, 128)
offset_right = 78.0
offset_bottom = 128.0
expand_mode = 3
stretch_mode = 5
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 88.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="TakeCard" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_cefgg")

[node name="PlaceCard" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yvhul")

[node name="PlaceBottle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yvhul")

[node name="NavelCard" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_47ht5")

[node name="GiveMoney" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_47ht5")
